--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,3 +32,11 @@ camunda:
       password: admin
 server:
   port: 8086
+
+factory:
+    jms:
+      url: "tcp://localhost:61616"
+      user: "admin"
+      password: "admin"
+      queue-out: "MANAGEMENT.FACTORY"
+      queue-in: "FACTORY.MANAGEMENT"
