--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.raiffeisen.custody</groupId>
-    <artifactId>custody-springdata-camunda-example</artifactId>
+    <groupId>ru.nnt.erp</groupId>
+    <artifactId>management-springdata-camunda-example</artifactId>
     <version>0.0.1</version>
 
     <properties>
@@ -19,7 +19,7 @@
         <lombok.version>1.18.20</lombok.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <kotlin.version>1.9.20-Beta2</kotlin.version>
+        <kotlin.version>1.8.22</kotlin.version>
     </properties>
 
 
@@ -103,15 +103,20 @@
         <!--        </dependency>-->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <artifactId>kotlin-reflect</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test</artifactId>
-            <version>${kotlin.version}</version>
-            <scope>test</scope>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.module</groupId>-->
+<!--            <artifactId>jackson-module-kotlin</artifactId>-->
+<!--            <version>${kotlin.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.jetbrains.kotlin</groupId>-->
+<!--            <artifactId>kotlin-test</artifactId>-->
+<!--            <version>${kotlin.version}</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <!--        <dependency>-->
         <!--            <groupId>io.swagger.core.v3</groupId>-->
         <!--            <artifactId>swagger-annotations</artifactId>-->
@@ -182,124 +187,182 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <layout>ZIP</layout>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
+                <groupId>org.jetbrains.kotlin</groupId>
                 <version>${kotlin.version}</version>
                 <executions>
                     <execution>
                         <id>compile</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
+                        <goals> <goal>compile</goal> </goals>
                         <configuration>
                             <sourceDirs>
-                                <source>src/main/java</source>
-                                <source>target/generated-sources/annotations</source>
+                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
                             </sourceDirs>
                         </configuration>
                     </execution>
                     <execution>
                         <id>test-compile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>test-compile</goal>
-                        </goals>
+                        <goals> <goal>test-compile</goal> </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
+                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                            </sourceDirs>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <jvmTarget>${maven.compiler.target}</jvmTarget>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
                 <executions>
+                    <!-- Replacing default-compile as it is treated specially by maven -->
                     <execution>
                         <id>default-compile</id>
                         <phase>none</phase>
                     </execution>
+                    <!-- Replacing default-testCompile as it is treated specially by maven -->
                     <execution>
                         <id>default-testCompile</id>
                         <phase>none</phase>
                     </execution>
                     <execution>
-                        <id>compile</id>
+                        <id>java-compile</id>
                         <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
+                        <goals> <goal>compile</goal> </goals>
                     </execution>
                     <execution>
-                        <id>testCompile</id>
+                        <id>java-test-compile</id>
                         <phase>test-compile</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
+                        <goals> <goal>testCompile</goal> </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <source>9</source>
-                    <target>9</target>
-                </configuration>
             </plugin>
-            <!--            <plugin>-->
-            <!--                <groupId>org.openapitools</groupId>-->
-            <!--                <artifactId>openapi-generator-maven-plugin</artifactId>-->
-            <!--                <version>3.3.4</version>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <phase>compile</phase>-->
-            <!--                        <goals>-->
-            <!--                            <goal>generate</goal>-->
-            <!--                        </goals>-->
-            <!--                        <configuration>-->
-            <!--                            <generatorName>spring</generatorName>-->
-            <!--                            <inputSpec>${project.basedir}/src/main/resources/api.yaml</inputSpec>-->
-            <!--                            <output>${project.build.directory}/generated-sources</output>-->
-            <!--                            <apiPackage>com.api</apiPackage>-->
-            <!--                            <modelPackage>com.model</modelPackage>-->
-            <!--                            <supportingFilesToGenerate>-->
-            <!--                                ApiUtil.java-->
-            <!--                            </supportingFilesToGenerate>-->
-            <!--                            <configOptions>-->
-            <!--                                <groupId>${project.groupId}</groupId>-->
-            <!--                                <artifactId>${project.artifactId}</artifactId>-->
-            <!--                                <artifactVersion>${project.version}</artifactVersion>-->
-            <!--                                <delegatePattern>true</delegatePattern>-->
-            <!--                                <sourceFolder>swagger</sourceFolder>-->
-            <!--                                <library>spring-mvc</library>-->
-            <!--                                <interfaceOnly>true</interfaceOnly>-->
-            <!--                                <useBeanValidation>true</useBeanValidation>-->
-            <!--                                <dateLibrary>java8</dateLibrary>-->
-            <!--                                <java8>true</java8>-->
-            <!--                            </configOptions>-->
-            <!--                            <ignoreFileOverride>${project.basedir}/.openapi-generator-ignore</ignoreFileOverride>-->
-            <!--                        </configuration>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
         </plugins>
     </build>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <layout>ZIP</layout>-->
+<!--                </configuration>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>repackage</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    <source>17</source>-->
+<!--                    <target>17</target>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <groupId>org.jetbrains.kotlin</groupId>-->
+<!--                <artifactId>kotlin-maven-plugin</artifactId>-->
+<!--                <version>${kotlin.version}</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>compile</id>-->
+<!--                        <phase>compile</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>compile</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <sourceDirs>-->
+<!--                                <source>src/main/java</source>-->
+<!--                                <source>target/generated-sources/annotations</source>-->
+<!--                            </sourceDirs>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+<!--                    <execution>-->
+<!--                        <id>test-compile</id>-->
+<!--                        <phase>test-compile</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>test-compile</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <jvmTarget>${maven.compiler.target}</jvmTarget>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-compiler-plugin</artifactId>-->
+<!--&lt;!&ndash;                <executions>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <id>default-compile</id>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <phase>none</phase>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <id>default-testCompile</id>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <phase>none</phase>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <id>compile</id>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <phase>compile</phase>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <goals>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <goal>compile</goal>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </goals>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <id>testCompile</id>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <phase>test-compile</phase>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <goals>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <goal>testCompile</goal>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </goals>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                </executions>&ndash;&gt;-->
+<!--                <configuration>-->
+<!--                    <source>9</source>-->
+<!--                    <target>9</target>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--            &lt;!&ndash;            <plugin>&ndash;&gt;-->
+<!--            &lt;!&ndash;                <groupId>org.openapitools</groupId>&ndash;&gt;-->
+<!--            &lt;!&ndash;                <artifactId>openapi-generator-maven-plugin</artifactId>&ndash;&gt;-->
+<!--            &lt;!&ndash;                <version>3.3.4</version>&ndash;&gt;-->
+<!--            &lt;!&ndash;                <executions>&ndash;&gt;-->
+<!--            &lt;!&ndash;                    <execution>&ndash;&gt;-->
+<!--            &lt;!&ndash;                        <phase>compile</phase>&ndash;&gt;-->
+<!--            &lt;!&ndash;                        <goals>&ndash;&gt;-->
+<!--            &lt;!&ndash;                            <goal>generate</goal>&ndash;&gt;-->
+<!--            &lt;!&ndash;                        </goals>&ndash;&gt;-->
+<!--            &lt;!&ndash;                        <configuration>&ndash;&gt;-->
+<!--            &lt;!&ndash;                            <generatorName>spring</generatorName>&ndash;&gt;-->
+<!--            &lt;!&ndash;                            <inputSpec>${project.basedir}/src/main/resources/api.yaml</inputSpec>&ndash;&gt;-->
+<!--            &lt;!&ndash;                            <output>${project.build.directory}/generated-sources</output>&ndash;&gt;-->
+<!--            &lt;!&ndash;                            <apiPackage>com.api</apiPackage>&ndash;&gt;-->
+<!--            &lt;!&ndash;                            <modelPackage>com.model</modelPackage>&ndash;&gt;-->
+<!--            &lt;!&ndash;                            <supportingFilesToGenerate>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                ApiUtil.java&ndash;&gt;-->
+<!--            &lt;!&ndash;                            </supportingFilesToGenerate>&ndash;&gt;-->
+<!--            &lt;!&ndash;                            <configOptions>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                <groupId>${project.groupId}</groupId>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                <artifactId>${project.artifactId}</artifactId>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                <artifactVersion>${project.version}</artifactVersion>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                <delegatePattern>true</delegatePattern>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                <sourceFolder>swagger</sourceFolder>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                <library>spring-mvc</library>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                <interfaceOnly>true</interfaceOnly>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                <useBeanValidation>true</useBeanValidation>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                <dateLibrary>java8</dateLibrary>&ndash;&gt;-->
+<!--            &lt;!&ndash;                                <java8>true</java8>&ndash;&gt;-->
+<!--            &lt;!&ndash;                            </configOptions>&ndash;&gt;-->
+<!--            &lt;!&ndash;                            <ignoreFileOverride>${project.basedir}/.openapi-generator-ignore</ignoreFileOverride>&ndash;&gt;-->
+<!--            &lt;!&ndash;                        </configuration>&ndash;&gt;-->
+<!--            &lt;!&ndash;                    </execution>&ndash;&gt;-->
+<!--            &lt;!&ndash;                </executions>&ndash;&gt;-->
+<!--            &lt;!&ndash;            </plugin>&ndash;&gt;-->
+<!--        </plugins>-->
+<!--    </build>-->
 </project>
